guarde los cambio, nada más

--- a/PracticaDOM/index.html
+++ b/PracticaDOM/index.html
@@ -18,6 +18,17 @@
                 <button class="btn btn-primary" onclick="cambiarColor()">Cambiar</button>
             </div>
         </section>
+        <section class="container my-4">
+            <article>
+                <h2>Llegaron las vacunas del covid</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit sed dolorem dolores praesentium? Minus!</p>
+            </article>
+            <button class="btn btn-primary" onclick="verMas()" id="btnVerMas">Ver más...</button>
+            <article class="mt-5">
+                <h2>Llega fin de año!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ratione molestiae ipsam in, nobis ipsum perferendis eveniet aspernatur quidem minus.</p>
+            </article>
+        </section>
     </main>
     <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
